change all Html pages

--- a/src/main/resources/templates/page/contact.html
+++ b/src/main/resources/templates/page/contact.html
@@ -74,7 +74,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="C:\Users\DELL\Desktop\Lab\src\main\resources\templates\index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-primary"><i class="fa fa-tooth me-2"></i>ABC LABORATORIES</h1>
+            <h1 class="m-0 text-primary"><i class="fa fa-tooth me-2"></i>ABCLABCAREPRO</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -89,7 +89,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="price.html" class="dropdown-item">Prices</a>
                         <a href="team.html" class="dropdown-item">specialist Staff</a>
-                        <a href="testimonial.html" class="dropdown-item">Feedbacks</a>
+                        <a href="testimonial.html" class="dropdown-item">Feedback</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                     </div>
                 </div>
