--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-primary"><i class="fa fa-tooth me-2"></i>ABC LABORATORIES</h1>
+            <h1 class="m-0 text-primary"><i class="fa fa-tooth me-2"></i>ABCLABCAREPRO</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -183,7 +183,7 @@
                             <h6 class="text-white mb-0">Sunday & Poyaday</h6>
                             <p class="mb-0"> Closed</p>
                         </div>
-                        <a class="btn btn-light" href="page/appointment.html">Appointment Now</a>
+                        <a class="btn btn-light" href="">View Your Test Resault</a>
                     </div>
                 </div>
                 <div class="col-lg-4 wow zoomIn" data-wow-delay="0.3s">
