--- a/src/main/resources/templates/page/price.html
+++ b/src/main/resources/templates/page/price.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ABC Laboratories - Lab Appointment System Contactus</title>
+    <title>ABC Laboratories - Lab Appointment System prices</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -74,7 +74,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="C:\Users\DELL\Desktop\Lab\src\main\resources\templates\index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-primary"><i class="fa fa-tooth me-2"></i>ABC LABORATORIES</h1>
+            <h1 class="m-0 text-primary"><i class="fa fa-tooth me-2"></i>ABCLABCAREPRO</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
