--- a/src/main/resources/templates/page/cerditpay.html
+++ b/src/main/resources/templates/page/cerditpay.html
@@ -130,8 +130,8 @@
     <form class="form" id="payform">
         <h2>Payment Form</h2>
         <div class="form-group">
-            <label for="paymentid">Payment Id No:</label>
-            <input type="text" id="paymentid" name="paymentid" required>
+            <label for="Apoinmentidno">Payment Id No:</label>
+            <input type="text" id="Apoinmentidno" name="Apoinmentidno" required>
         </div>
         <div class="form-group">
             <label for="name">Card Holder Name:</label>
@@ -239,7 +239,7 @@
             alert('Thankyou!!!!,Payment successfully!,Come again');
         // Optionally, clear the form after successful message sending
             document.getElementById("payform").reset();
-            window.location.href = 'C:\Users\DELL\Desktop\Lab\src\main\resources\templates\index.html'
+            window.location.href = 'index.html'
         } else {
            alert('Failed to send message. Please try again.');
         }
