--- a/src/main/resources/templates/page/Admin/Admindashboard.html
+++ b/src/main/resources/templates/page/Admin/Admindashboard.html
@@ -619,6 +619,10 @@ nav.close ~ .dashboard .top{
 
                 <span class="link-name">Results</span>
             </a></li>
+            <li><a href="#">
+                <i class="uil uil-thumbs-up"></i>
+                <span class="link-name">Appoinment</span>
+            </a></li>
         </ul>
 
         <ul class="logout-mode">
