Change html Tags

--- a/src/main/resources/templates/page/Staff/Staff.html
+++ b/src/main/resources/templates/page/Staff/Staff.html
@@ -598,17 +598,21 @@ nav.close ~ .dashboard .top{
                 <i class="uil uil-estate"></i>
                 <span class="link-name">Dahsboard</span>
             </a></li>
-            <li><a href="">
+            <li><a href=Testingmanage.html>
                 <i class="uil uil-files-landscapes"></i>
                 <span class="link-name">Testing</span>
             </a></li>
-            <li><a href="">
+            <li><a href="Appoinmentmanage.html">
                 <i class="uil uil-share"></i>
-                <span class="link-name">Staff</span>
+                <span class="link-name">Appoinment</span>
             </a></li>
-            <li><a href="">
+            <li><a href="Paymentmanage.html">
                 <i class="uil uil-thumbs-up"></i>
                 <span class="link-name">Payments</span>
+            </a></li>
+            <li><a href="Resaultsmanage.html">
+                <i class="uil uil-share"></i>
+                <span class="link-name">Result</span>
             </a></li>
 
         </ul>
@@ -659,7 +663,7 @@ nav.close ~ .dashboard .top{
         <div class="overview">
             <div class="title">
                 <i class="uil uil-tachometer-fast-alt"></i>
-                <span class="text">Admin Dashboard</span>
+                <span class="text"> Lab Technician</span>
             </div>
 
             <div class="boxes">
@@ -684,7 +688,7 @@ nav.close ~ .dashboard .top{
         <div class="activity">
             <div class="title">
                 <i class="uil uil-clock-three"></i>
-                <span class="text">Daily Income</span>
+                <span class="text">Complets Payments</span>
             </div>
 
             <table class="table">
