--- a/src/main/resources/templates/page/Staff/Paymentmanage.html
+++ b/src/main/resources/templates/page/Staff/Paymentmanage.html
@@ -1,37 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>ABCLABCAREPRO LOGIN PAGE</title>
+    <title>Payments view Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/style.css">
-
     <style>
-
-        /* Add custom CSS for the user type combo box */
-        select {
-			font-size: 15px;
-
-			transition: all 0.5s ease;
-			height: calc(1.5em + 0.75rem + 2px);
-            padding: 0.375rem 1.75rem 0.375rem 0.75rem;
-			width: 100%;
-			border-color: black;
-			font-weight: 400;
-            line-height: 1.5;
-			height: 50px;
-            color: rgb(17, 16, 16) !important;
-            border: 1px solid transparent;
-            background: rgba(255, 255, 255, 0.08);
-            border-radius: 40px;
-
-		}
         /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -3144,7 +3123,7 @@ input[type="button"].btn-block {
     background-color: rgba(0, 123, 255, 0.5); }
 
 .custom-select {
-  display: contents;
+  display: inline-block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
@@ -3153,7 +3132,7 @@ input[type="button"].btn-block {
   line-height: 1.5;
   color: #495057;
   vertical-align: middle;
-
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
   background-color: #fff;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
@@ -8167,30 +8146,18 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family: "Lato", Arial, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.8;
   font-weight: normal;
-  color: gray;
-  position: relative;
-  z-index: 0;
-  padding: 0; }
-  body:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    content: '';
-    background: #000;
-    opacity: .3;
-    z-index: -1; }
+  background: #2b3035;
+  color: gray; }
 
 a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #fbceb5; }
+  color: #1089ff; }
   a:hover, a:focus {
     text-decoration: none !important;
     outline: none !important;
@@ -8201,11 +8168,11 @@ h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   line-height: 1.5;
   font-weight: 400;
-  font-family: "Lato", Arial, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   color: #000; }
 
 .bg-primary {
-  background: #fbceb5 !important; }
+  background: #1089ff !important; }
 
 .ftco-section {
   padding: 7em 0; }
@@ -8225,241 +8192,85 @@ h1, h2, h3, h4, h5,
   background-repeat: no-repeat;
   background-position: center center; }
 
-.login-wrap {
-  position: relative;
-  color: rgba(255, 255, 255, 0.9); }
-  .login-wrap h3 {
-    font-weight: 300;
-    color: #fff; }
-  .login-wrap .social {
-    width: 100%; }
-    .login-wrap .social a {
-      width: 100%;
-      display: block;
-      border: 1px solid rgba(255, 255, 255, 0.4);
-      color: #000;
-      background: #fff; }
-      .login-wrap .social a:hover {
-        background: #000;
-        color: #fff;
-        border-color: #000; }
+.table-wrap {
+  overflow-x: scroll; }
 
-.form-group {
-  position: relative; }
-
-.field-icon {
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  color: rgba(255, 255, 255, 0.9); }
-
-.form-control {
-  background: transparent;
-  border: none;
-  height: 50px;
-  color: white !important;
-  border: 1px solid transparent;
-  background: rgba(255, 255, 255, 0.08);
-  border-radius: 40px;
-  padding-left: 20px;
-  padding-right: 20px;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s; }
-  @media (prefers-reduced-motion: reduce) {
-    .form-control {
-      -webkit-transition: none;
-      -o-transition: none;
-      transition: none; } }
-  .form-control::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    color: rgba(255, 255, 255, 0.8) !important; }
-  .form-control::-moz-placeholder {
-    /* Firefox 19+ */
-    color: rgba(255, 255, 255, 0.8) !important; }
-  .form-control:-ms-input-placeholder {
-    /* IE 10+ */
-    color: rgba(255, 255, 255, 0.8) !important; }
-  .form-control:-moz-placeholder {
-    /* Firefox 18- */
-    color: rgba(255, 255, 255, 0.8) !important; }
-  .form-control:hover, .form-control:focus {
-    background: transparent;
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-color: rgba(255, 255, 255, 0.4); }
-  .form-control:focus {
-    border-color: rgba(255, 255, 255, 0.4); }
-
-textarea.form-control {
-  height: inherit !important; }
-
-.checkbox-wrap {
-  display: block;
-  position: relative;
-  padding-left: 30px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
-/* Hide the browser's default checkbox */
-.checkbox-wrap input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0; }
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0; }
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "\f0c8";
-  font-family: "FontAwesome";
-  position: absolute;
-  color: rgba(255, 255, 255, 0.1);
-  font-size: 20px;
-  margin-top: -4px;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s; }
-  @media (prefers-reduced-motion: reduce) {
-    .checkmark:after {
-      -webkit-transition: none;
-      -o-transition: none;
-      transition: none; } }
-
-/* Show the checkmark when checked */
-.checkbox-wrap input:checked ~ .checkmark:after {
-  display: block;
-  content: "\f14a";
-  font-family: "FontAwesome";
-  color: rgba(0, 0, 0, 0.2); }
-
-/* Style the checkmark/indicator */
-.checkbox-primary {
-  color: #fbceb5; }
-  .checkbox-primary input:checked ~ .checkmark:after {
-    color: #fbceb5; }
-
-.btn {
-  cursor: pointer;
-  border-radius: 40px;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  font-size: 15px;
-  text-transform: uppercase; }
-  .btn:hover, .btn:active, .btn:focus {
-    outline: none; }
-  .btn.btn-primary {
-    background: #fbceb5 !important;
-    border: 1px solid #fbceb5 !important;
-    color: #000 !important; }
-    .btn.btn-primary:hover {
-      border: 1px solid #fbceb5;
-      background: transparent;
-      color: #fbceb5; }
-    .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #fbceb5;
-      background: transparent;
-      color: #fbceb5; }
-      .btn.btn-primary.btn-outline-primary:hover {
-        border: 1px solid transparent;
-        background: #fbceb5;
-        color: #fff; }
-
-
+.table {
+  min-width: 1000px !important;
+  width: 100%; }
+  .table thead th {
+    border: none;
+    padding: 20px 30px;
+    font-size: 14px;
+    color: #fff;
+    border-bottom: 4px solid #2b3035; }
+  .table tbody tr {
+    margin-bottom: 10px; }
+  .table tbody th, .table tbody td {
+    border: none;
+    padding: 20px 30px;
+    border-bottom: 3px solid #2b3035;
+    font-size: 14px; }
 
     </style>
 
 </head>
-<body class="img js-fullheight" style="background-image: url(images/bg.jpg);">
+<body>
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
-                <h2 class="heading-section">ABCLABCAREPRO LOGIN</h2>
+                <h2 class="heading-section">View Recently Payments</h2>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-4">
-                <div class="login-wrap p-0">
-                    <h3 class="mb-4 text-center">Have an account?</h3>
-                    <form action="#" class="signin-form" id="loginForm">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Id number" id="id" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password" id="password" required>
-                            <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
-                        </div>
-                        <!-- Add the user type combo box -->
-                        <div class="form-group">
-                            <div class="custom-select">
-                                <select id="usertype" name="usertype">
-                                    <option value="Not Selected">Select user</option>
-                                    <option value="Admin">Admin</option>
-                                    <option value="Lab Technician">Lab Technician</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <button type="button" class="form-control btn btn-primary submit px-3" onclick="login()">Sign In</button>
-                        </div>
-                        <div class="form-group d-md-flex">
-                            <div class="w-50">
-                                <label class="checkbox-wrap checkbox-primary">Remember Me
-                                    <input type="checkbox" checked>
-                                    <span class="checkmark"></span>
-                                </label>
-                            </div>
-                            <div class="w-50 text-md-right">
-                                <a href="#" style="color: #fff">Forgot Password</a>
-                            </div>
-                        </div>
-                    </form>
-                    <p class="w-100 text-center">&mdash; Or Sign In With &mdash;</p>
-                    <div class="social d-flex text-center">
-                        <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
-                        <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
-                    </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="table-wrap">
+                    <table class="table table-bordered table-dark table-hover">
+                        <thead>
+                        <tr>
+                            <th class="Apoinmentidno">Apoinmentidno</th>
+                            <th class="name">name</th>
+                            <th class="cardno">cardno</th>
+                            <th class="date">date</th>
+                            <th class="payamount">payamount</th>
+
+                        </tr>
+                        </thead>
+                        <tbody id="dailysailsview"></tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
 <script>
-    function login() {
-        var usertype = document.getElementById('usertype').value; // Get selected user type
+    function getAllPayments() {
+        fetch('http://localhost:8081/getAllPayments')
+            .then(response => response.json())
+            .then(data => {
+                const dailysailsview = document.getElementById('dailysailsview');
+                dailysailsview.innerHTML = '';
 
-        // Check the selected user type and redirect accordingly
-        if (usertype == 'Admin') {
-            window.location.href = 'Admin/Admindashboard.html'; // Redirect to admin dashboard
-            alert("Admin login successful!");
-        } else if (usertype == 'Lab Technician') {
-            window.location.href = 'Staff/Staff.html'; // Redirect to lab technician page
-            alert("Lab Technician login successful!");
-        } else {
-            alert("Please select a user type.");
-        }
+                data.forEach(pay => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${pay.apoinmentidno}</td>
+                        <td>${pay.name}</td>
+                        <td>${pay.cardno}</td>
+                        <td>${pay.date}</td>
+                        <td>${pay.payamount}</td>
+
+                    `;
+                    dailysailsview.appendChild(row);
+                });
+            })
+            .catch(error => console.error('Error fetching payments:', error));
     }
+
+    // Call the function to fetch and display payments
+    getAllPayments();
 </script>
-
-
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.js"></script>
